mdapi/objects/ltng_UrlHackBase__c.object
<CustomObject>
    <description>Base / Parent object to use when demoing the URL Hack Replacement.</description>
    <label>URL Hack Base</label>
    <nameField>
        <label>Url Hack Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>URL Hack Bases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CustomDescription__c</fullName>
        <inlineHelpText>Description of this object</inlineHelpText>
        <label>Custom Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SampleCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SampleDate__c</fullName>
        <label>Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SampleNumber__c</fullName>
        <label>Sample Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SamplePicklist__c</fullName>
        <label>Sample Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Validating</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>